[project]
name = "browser-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.68.0",
    "fastapi-mcp>=0.1.0",
    "httpx>=0.19.0",
    "playwright>=1.41.0",
    "pydantic>=1.8.0",
    "python-dotenv>=0.19.0",
    "selenium>=4.0.0",
    "uvicorn>=0.15.0",
    "webdriver-manager>=3.5.0",
]
